relaxng-gen/tests/snapshots/generate_and_run__tuto3b.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<addressBook>
  <card name="John Doe" email="john.doe@example.com"/>
  <card givenName="Fred" familyName="Smith" email="fred.smith@example.com"/>
</addressBook>
