relaxng-gen/tests/snapshots/generate_and_run__tuto4b.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<doc>
	<bold>
    <italic>bold-italic</italic>
  </bold>
	<italic>italic</italic>
</doc>
