relaxng-gen/tests/snapshots/generate_and_run__tuto5.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<number>42</number>
