relaxng-gen/tests/snapshots/generate_and_run__tuto6.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<card bool="some text">
  <preferredFormat>
    <ff>fftext</ff>
  </preferredFormat>
</card>
