relaxng-gen/tests/snapshots/generate_and_run__tuto6a.snap
---
source: relaxng-gen/tests/generate_and_run.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<card>
  <preferredFormat>html</preferredFormat>
  <preferredFormat>html</preferredFormat>
  <preferredFormat>
    <ff>something</ff>
  </preferredFormat>
</card>
